cuentas-ms/src/main/java/com/banco/test/cuentasms/web/error/InputNotFound.java
package com.banco.test.cuentasms.web.error;

public class InputNotFound extends RuntimeException {

    public InputNotFound(String message){
        super(message);
    }
}
